2.1.0.107 - 2011/05/20:

  - Step definitions that accept an Exception as a parameter can
    prevent the previous step from failing if it threw an exception.

  - DateTimeParser was updated to be smarter with units. When the unit
    is "day", "month", or "year", the base is DateTime.Today instead
    of DateTime.Now. You can override that by using "x units before
    anchor" or "x units from anchor" where "anchor" can be "now",
    "today", "yesterdy", or "tomorrow".

2.0.1.102 - 2010/09/03:

  - Scenarios are now allowed to not have a name.

  - Undefined steps that use a form or grid now suggest a class along
    with the method.

  - Scenarios with undefined steps now report that in their exception
    message.

  - Step definitions with longer names are now considered for matches
    before those with shorter names. This fixes the problem where the
    wrong step definition could get invoked.

  - Added "with" as another "secondary" keyword (like "and").

  - The plain text reporter now separates steps from the previous with
    blank lines if they use a "primary" keyword (given, when, or then).
    This allows you to create your own "groups" by starting with a
    primary keyword and connecting steps to it with secondary keywords.

  - Context objects that implement IDisposable now get disposed after
    the scenario is done executing.

2.0.0.90 - 2010/07/11:

  - First release of BehaveN 2. Almost a complete rewrite with a
    completely changed API. Sorry.

  - No more code-only syntax. Don't ask for it.

  - [Convert] and [FromContext] attributes are gone.

  - It's now possible to write step definitions in an assembly
    without referencing BehaveN.dll.

  - IoC-like injection of "context" objects into constructors of
    classes containing step definitions.

  - Output parameters of step definitions cause BehaveN to assert
    on values.

  - Some limited support for authoring steps in natural languages.
